# gsplat-simulator

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  Dockerfile  Install_guide.md  Install_guide_docker.md  LICENSE  README.md  dev_run_app.py  docker-compose.yml
.agents/: AGENTS.md
.codex/: config.toml
.codex/agents/: implementer.toml
apps/core/main/: Cargo.toml
apps/core/main/src/: main.rs  zenoh.rs
apps/core/main/tests/: zenoh_tests.rs
apps/render/: main.py  render_worker.py  requirements.txt  sample.py  subscribe_check.py  zenoh_worker.py
apps/render/tests/: conftest.py  test_main.py  test_render_worker.py  test_zenoh_worker.py
apps/ui/: CMakeLists.txt
apps/ui/src/: main.cpp  main_window.cpp  main_window.h  render_worker.cpp  render_worker.h  zenoh_smoke_test.cpp  zenoh_smoke_test.h
apps/ui/tests/: main_window_test.cpp
config/: transport.dev.json  transport.dev.json5
crates/zenoh_sdk/: Cargo.toml
crates/zenoh_sdk/src/: lib.rs
docs/: architecture_overview.md  camera-architecture.md
tests/: test_dev_run_app.py
