[workspace]
members = [
  "apps/core/main",
  "crates/zenoh_sdk",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
zenoh = { package = "gsplat_zenoh", path = "crates/zenoh_sdk" }
